# ClockClock24-py

./: .gitignore  README.md  SUMMARY.md  pyproject.toml  run.py
.github/workflows/: Build & Release.yml  wheels.yml
clockclock24_py/: __init__.py  main.py
clockclock24_py/components/: __init__.py  clock.py  clockclock24.py  needle.py  number.py
clockclock24_py/constants/: __init__.py  config.py  numbers.py  shapes.py  utils.py
clockclock24_py/tests/: test_engine.py  test_timers.py  test_utils.py
clockclock24_py/utils/: engine.py  timers.py  utils.py
tests/: test_engine.py
